* Further fixes to the upgrader to polish it on IE:   * We now show the nav bar when the progress bar is running   * Got rid of the gap in the progress bar on Firefox   * Got rid of an artifact on IE where the navbar is too wide on the     "redo these step" pages.   * Broke the NavBar out into its own page so that it can be included     twice.   * Converted some element ids to classes so that we can use the same     element twice on one page (like the navbar and header)   * Reformatted HTML to my liking.   * Updated CSS accordingly
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@10960 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/upgrade/styles/style.css
+++ b/upgrade/styles/style.css
@@ -79,24 +79,25 @@ a:hover {
   border: 0px;
 }
 
-#header img {
+td.header img {
   margin-left: 14px;
 }
 
-#navbar {
+td.navbar {
   font-family: Verdana, "Lucida Grande", Arial, sans-serif;
   width: 140px;
   vertical-align: top;
+  margin: auto;
 }
 
-#navbar div {
+td.navbar div {
   background-color: #d1e0ee;
   border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   padding: 10px 0 10px 10px;
 }
 
-#navbar td.heading {
+td.navbar td.heading {
   font-size: 1.4em;
   font-weight: bold;
   font-family: "Gill Sans", Verdana, Arial, sans-serif;
@@ -104,16 +105,16 @@ a:hover {
   padding: 3px;
 }
 
-#navbar td {
+td.navbar td {
   border-bottom: 1px solid #ecf2f8;
   padding: 8px 2px;
 }
 
-#navbar tr.help td {
+td.navbar tr.help td {
   padding-top: 22px;
 }
 
-#navbar .helpBox {
+td.navbar .helpBox {
   font-weight: bold;
   color: #eee;
   background-color: #ae0000;
@@ -125,6 +126,7 @@ a:hover {
 .main {
   vertical-align: top;
   padding: 14px 22px 8px 14px;
+  width: 620px;
 }
 
 .main h1 { font-size: 1.4em; }
@@ -308,4 +310,12 @@ a:hover {
 .progressToGo {
   background-color: #eee;
   border: thin solid #ddd;
+}
+
+#MainPageStatus_statusBlock table {
+  border: 0px;
+  border-collapse: collapse;
+  border-spacing: 0px;
+  padding: 0px;
+  margin: 0px;
 }
